--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,16 @@
       <button type="button" class="btn btn-default">Button Two</button>
       <button type="button" class="btn btn-primary">Button Three</button>
       <button type="button" class="btn btn-lg btn-danger">Button Four</button>
+     
+     <p><a href="index.html"> Home Page</a></p>
+      <nav>
+        <ul>
+          <li><a href="OrderForm.html">OrderForm</a></li>
+          <li><a href="index.html">Home</a></li>
+ 
+        </ul>
+      </nav>
+    </header>
 
     </div>
   </body>
